--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-image: url('background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
  .data
 {
@@ -30,7 +34,7 @@ ul
 }
 input
 {
-    width: 500px;
+    min-width: 300px;
     height: 30px;
     font-size: large;
     align-items: center;
@@ -39,6 +43,8 @@ input
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.0);
 }
 .data 
 {
@@ -52,8 +58,10 @@ input
     margin: 16px;
     width: 300px;
     border: 1px solid #eee;
-    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    box-shadow: 2px 4px 16px rgba(0,0,0,.6);
     border-radius: 10px;
+    color: white;
+    background-color: rgba(0,0,0,.5);
 }
 footer
 {
@@ -62,5 +70,6 @@ footer
     align-items: center;
     justify-content: space-between;
     height: 72px;
-    background: rgba(240, 240, 240, 0.5);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
 }
