--- a/style.css
+++ b/style.css
@@ -57,24 +57,28 @@ input
 }
 img
 {
-    max-width: 30%;
-    min-width: 600px;
+    max-width: 50%;
     height: auto;
     border-radius: 8px;
-    flex-shrink: 0;
 }
 .img
 {
     display: flex;
     gap: 50px;
+    flex-shrink: 1;
 }
 .img p
 {
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    max-width: 50%;
+    align-content: center;
+    justify-content:center;
     color: white;
-    font-size: large;
+    font-size: 36px;
     font-weight: 500;
+    font-style: italic;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 footer
 {
